hello-world-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app/name: hello-world
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app/name: hello-world
  template:
    metadata:
      labels:
        app/name: hello-world
    spec:
      containers:
      - image: gcr.io/google-samples/node-hello:1.0
        name: hello-world
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
